--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -63,6 +63,7 @@ hex = "0.4"
 regex = "1.12.2"
 fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
 dirs = "5.0"
+rand = "0.8"
 
 [target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
 tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
