--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.4",
+    "recharts": "^3.6.0",
     "react-router-dom": "^7.8.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.9",
@@ -119,7 +120,8 @@
     "uuid": "^13.0.0",
     "xterm-for-react": "^1.0.4",
     "zod": "4.1.8",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@swc/wasm-web": "^1.13.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
