--- a/packages/shared/src/data/models-config.json
+++ b/packages/shared/src/data/models-config.json
@@ -1,5 +1,5 @@
 {
-  "version": "2025-12-31T06:55:50.687Z",
+  "version": "2026-01-07T06:55:50.687Z",
   "models": {
     "gpt-5-nano": {
       "name": "GPT-5 Nano",
@@ -64,26 +64,6 @@
       },
       "context_length": 400000
     },
-    "gpt-52-chat": {
-      "name": "GPT 5.2 Chat",
-      "imageInput": true,
-      "providers": [
-        "aiGateway",
-        "openai",
-        "openRouter"
-      ],
-      "providerMappings": {
-        "openai": "gpt-5.2-chat",
-        "aiGateway": "openai/gpt-5.2-chat",
-        "openRouter": "openai/gpt-5.2-chat"
-      },
-      "pricing": {
-        "input": "0.00000175",
-        "output": "0.000014",
-        "cachedInput": "0.000000175"
-      },
-      "context_length": 400000
-    },
     "gpt-5-mini": {
       "name": "GPT-5 Mini",
       "imageInput": true,
@@ -126,6 +106,38 @@
         "input": "0.00000125",
         "output": "0.00001",
         "cachedInput": "0.000000125"
+      },
+      "context_length": 400000
+    },
+    "gpt-5.2-codex-medium": {
+      "name": "GPT-5.2-Codex-Medium",
+      "imageInput": true,
+      "providers": [
+        "openai"
+      ],
+      "providerMappings": {
+        "openai": "gpt-5.2-codex-medium"
+      },
+      "pricing": {
+        "input": "0.00000175",
+        "output": "0.000014",
+        "cachedInput": "0.000000175"
+      },
+      "context_length": 400000
+    },
+    "gpt-5.2-codex-high": {
+      "name": "GPT-5.2-Codex-High",
+      "imageInput": true,
+      "providers": [
+        "openai"
+      ],
+      "providerMappings": {
+        "openai": "gpt-5.2-codex-high"
+      },
+      "pricing": {
+        "input": "0.00000175",
+        "output": "0.000014",
+        "cachedInput": "0.000000175"
       },
       "context_length": 400000
     },
@@ -405,13 +417,11 @@
         "openRouter",
         "aiGateway",
         "zai",
-        "opencode",
         "ollama"
       ],
       "providerMappings": {
         "zhipu": "glm-4.7",
         "zai": "glm-4.7",
-        "opencode": "glm-4.7-free",
         "aiGateway": "zai/glm-4.7",
         "openRouter": "z-ai/glm-4.7",
         "ollama": "glm-4.7:cloud"
