--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "2.0.56",
-    "@ai-sdk/gateway": "^2.0.18",
-    "@ai-sdk/google": "2.0.51",
-    "@ai-sdk/mcp": "^0.0.7",
-    "@ai-sdk/openai": "2.0.88",
-    "@ai-sdk/openai-compatible": "^1.0.7",
-    "@ai-sdk/provider-utils": "^3.0.13",
+    "@ai-sdk/anthropic": "3.0.9",
+    "@ai-sdk/gateway": "3.0.10",
+    "@ai-sdk/google": "3.0.6",
+    "@ai-sdk/mcp": "1.0.5",
+    "@ai-sdk/openai": "3.0.7",
+    "@ai-sdk/openai-compatible": "2.0.4",
+    "@ai-sdk/provider-utils": "4.0.4",
     "@hookform/resolvers": "^5.2.1",
     "@icons-pack/react-simple-icons": "^13.7.0",
     "@libsql/client": "^0.15.15",
@@ -50,7 +50,7 @@
     "@monaco-editor/react": "4.7.0",
     "@mozilla/readability": "^0.6.0",
     "@openrouter/ai-sdk-provider": "1.5.4",
-    "@opeoginni/github-copilot-openai-compatible": "^0.1.21",
+    "@opeoginni/github-copilot-openai-compatible": "1.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -71,6 +71,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@swc/wasm-web": "^1.13.2",
     "@tailwindcss/vite": "^4.1.11",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-deep-link": "^2.4.5",
@@ -87,7 +88,7 @@
     "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
-    "ai": "5.0.108",
+    "ai": "6.0.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -102,10 +103,10 @@
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.4",
-    "recharts": "^3.6.0",
     "react-router-dom": "^7.8.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.9",
+    "recharts": "^3.6.0",
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
@@ -120,8 +121,7 @@
     "uuid": "^13.0.0",
     "xterm-for-react": "^1.0.4",
     "zod": "4.1.8",
-    "zustand": "^5.0.8",
-    "@swc/wasm-web": "^1.13.2"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
